# pkgxray

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
notebooks/: pkgxray_tutorial.ipynb
src/pkgxray/: __init__.py  cli.py  downloader.py  extractor.py  reporter.py  scanner.py  scorer.py
src/pkgxray/analyzers/: __init__.py  base.py  code_exec.py  dynamic_imports.py  env_access.py  filesystem.py  network.py  obfuscation.py  setup_scripts.py  subprocess_calls.py
tests/: conftest.py  test_downloader.py  test_extractor.py  test_scanner.py
tests/test_analyzers/: test_code_exec.py  test_dynamic_imports.py  test_env_access.py  test_filesystem.py  test_network.py  test_obfuscation.py  test_setup_scripts.py  test_subprocess.py
